[package]
name = "x_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
pinocchio-associated-token-account = "0.1.1"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }

[dev-dependencies]
mollusk-svm = "0.3.0"
solana-sdk = "2.3.0"
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"
solana-program-runtime = "2.3.1"
