[package]
name = "x_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"
pinocchio-system = "0.2.3"
pinocchio-token = "0.3.0"
pinocchio-associated-token-account = "0.1.1"
bytemuck = { version = "1.23.0", features = ["derive", "min_const_generics"] }

[build-dependencies]
litesvm-testing = { git = "https://github.com/levicook/litesvm-testing", features = ["pinocchio"] }

[dev-dependencies]
solana-sdk = "2.2.1"
spl-token = "7.0.0"
spl-associated-token-account = "6.0.0"
litesvm = "0.6.1"